# ordo

./: .gitignore  .gitmodules  README.md  build.sh
ansible/: README.md  ansible.cfg  bench-aws.sh  benchbase.yml  haproxy.yml  lineairdb.yml  measure.yml  measure_cpu.yml  measure_term.yml  measure_usage.yml  mysql.yml  site.yml  stop-aws.sh  update.yml
ansible/py/: bench_aws.py  plot_cpu.py  plot_perf.py  plot_throughput.py  plot_tpcc.py  plot_tpch.py  update_inventory.py
ansible/templates/: haproxy.cfg.j2  inventory.ini.template
bench/: README.md  run_tpcc.sh  run_ycsb.sh  setup.sql  setup_benchbase.sh
bench/config/: tpcc.xml  tpch-ddl.sql  tpch.xml  ycsb.xml
common/: log.h
lineairdb_proxy/: CMakeLists.txt  lineairdb_client.cc  lineairdb_transaction.cc
lineairdb_service/: lineairdb_server.cc  lineairdb_server.hh
proto/: lineairdb.proto
proxy/: CMakeLists.txt  batch_dispatcher.cc  batch_dispatcher.hh  ha_lineairdb.cc  ha_lineairdb.hh  index_search_plan.hh  lineairdb_client.cc  lineairdb_client.hh  lineairdb_field.cc  lineairdb_field.hh  lineairdb_proxy.cc  lineairdb_proxy.hh  lineairdb_transaction.cc  lineairdb_transaction.hh  rpc_trace.cc  rpc_trace.hh
scripts/: analyze_protobuf_timings.py  build.sh  build_partial.sh  freq_watch.sh  plot_freq.py  plot_freq_and_tp.py  run_dist.sh  run_local.sh  run_local_with_pidstat.sh  start_mysql.sh  start_ordo.sh  start_server.sh  stop_mysql.sh  stop_ordo.sh  stop_server.sh
scripts/experimental/: generate_ycsb_config.sh  generate_ycsb_configs.sh  phase_execute.sh  phase_load.sh  phase_setup.sh  run_ycsb.sh  run_ycsb_multi.sh  setup_multi.sh  start_mysql_multi.sh  sweep_max_scan.sh
server/: CMakeLists.txt  lineairdb_server.cc  lineairdb_server.hh  main.cc  ordo_server.cc  ordo_server.hh
server/network/: connection_context.hh  message_handler.cc  message_handler.hh  tcp_server.cc  tcp_server.hh  thread_group.cc  thread_group.hh  thread_pool_coordinator.cc  thread_pool_coordinator.hh  thread_pool_timer.cc  thread_pool_timer.hh
server/protocol/: message.hh
server/rpc/: lineairdb_rpc.cc  lineairdb_rpc.hh  predicate_evaluator.cc  predicate_evaluator.hh
server/storage/: database_manager.cc  database_manager.hh  transaction_manager.cc  transaction_manager.hh
server/worker/: transaction_worker.cc  transaction_worker.hh  worker_manager.cc  worker_manager.hh
test/: run_tests.py
test/pytest/utils/: connection.py
tools/bench_client/: client.cc  client.hh  key_encoder.cc  key_encoder.hh  main.cc  stats.cc  stats.hh  wire.cc  wire.hh  workload_tpcc.cc  workload_tpcc.hh
